--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,7 @@
+$primary-color: #272727;
+$accent-color: #ff652f;
+$text-color: #fff;
+
 body {
-    background: blue;
+    background: $primary-color;
 }
