--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,18 @@
 body {
   background: #272727;
+  color: #fff;
+}
+
+.main {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.main .main__paragraph {
+  font-weight: 700;
+}
+
+.main .main__paragraph:hover {
+  color: pink;
 }
 /*# sourceMappingURL=style.css.map */
