--- a/style/style.scss
+++ b/style/style.scss
@@ -1,14 +1,6 @@
-// Variables
-$primary-color: #272727;
-$accent-color: #ff652f;
-$text-color: #fff;
-
-// Mappers
-$font-weights: (
-    'regular': 400,
-    'medium': 500,
-    'bold': 700,
-);
+// Partials
+@import 'resets';
+@import 'variables';
 
 body {
     background: $primary-color;
