--- a/style/style.scss
+++ b/style/style.scss
@@ -2,6 +2,10 @@
 @import 'resets';
 @import 'variables';
 
+@function weight($weight-name) {
+    @return map-get($font-weights, $weight-name);
+}
+
 body {
     background: $primary-color;
     color: $text-color;
@@ -12,7 +16,7 @@ body {
     margin: 0 auto;
 
     #{&}__paragraph {
-        font-weight: map-get($font-weights, bold);
+        font-weight: weight(regular);
 
         &:hover {
             color: pink;
