--- a/style/style.scss
+++ b/style/style.scss
@@ -6,12 +6,20 @@
     @return map-get($font-weights, $weight-name);
 }
 
+@mixin flexCenter($direction) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: $direction;
+}
+
 body {
     background: $primary-color;
     color: $text-color;
 }
 
 .main {
+    @include flexCenter(column);
     width: 80%;
     margin: 0 auto;
 
