--- a/style/style.scss
+++ b/style/style.scss
@@ -13,6 +13,13 @@
     flex-direction: $direction;
 }
 
+@mixin theme($light-theme: true) {
+    @if $light-theme {
+        background: lighten($primary-color, 100%);
+        color: darken($text-color, 100%);
+    }
+}
+
 body {
     background: $primary-color;
     color: $text-color;
@@ -30,4 +37,8 @@ body {
             color: pink;
         }
     }
+}
+
+.light {
+    @include theme($light-theme: true);
 }
