--- a/style/style.scss
+++ b/style/style.scss
@@ -20,13 +20,19 @@
     }
 }
 
+@mixin mobile {
+    @media (max-width: $mobile) {
+        @content;
+    }
+}
+
 body {
     background: $primary-color;
     color: $text-color;
 }
 
 .main {
-    @include flexCenter(column);
+    @include flexCenter(row);
     width: 80%;
     margin: 0 auto;
 
@@ -36,6 +42,9 @@ body {
         &:hover {
             color: pink;
         }
+    }
+    @include mobile {
+        flex-direction: column;
     }
 }
 
