--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'home';
 
 body {
     background: $primary-color;
@@ -49,6 +50,7 @@ footer {
     font-size: 1rem;
     position: fixed;
     bottom: 0.4rem;
+    right: 1rem;
     text-align: right;
     padding: 1rem;
     color: #fff;
