--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,18 @@
   font-weight: 700;
 }
 
+.menu-btn {
+  position: absolute;
+  z-index: 1;
+  right: 1rem;
+  top: 1rem;
+  height: 20px;
+  width: 28px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
 body {
   background: #272727;
   color: #fff;
