--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,4 @@
-@import 'config';
-@import 'home';
-@import 'menu';
-@import 'about';
-@import 'projects';
+@import 'config', 'home', 'menu', 'about', 'projects', 'contact';
 
 body {
     background: $primary-color;
